Aulas de segurança

--- a/src/DevIO.App/Views/Fornecedores/Index.cshtml
+++ b/src/DevIO.App/Views/Fornecedores/Index.cshtml
@@ -7,9 +7,11 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<p>
+<p supress-by-claim-name="Fornecedor"
+   supress-by-claim-value="Excluir">
     <a class="btn btn-info" asp-action="Create">Novo fornecedor</a>
 </p>
+
 <table class="table">
     <thead class="thead-dark">
         <tr>
@@ -40,8 +42,15 @@
                 </td>
                 <td class="text-right">
                     <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><span class="fa fa-search"></span></a> |
-                    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><span class="fa fa-pencil-alt"></span></a> |
-                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id"><span class="fa fa-trash-alt"></span></a>
+                    <a class="btn btn-warning"
+                       disable-by-claim-name="Fornecedor"
+                       disable-by-claim-value="Editar"                       
+                       asp-action="Edit" asp-route-id="@item.Id"><span class="fa fa-pencil-alt"></span></a> |
+
+                    <a class="btn btn-danger"
+                       supress-by-claim-name="Fornecedor"
+                       supress-by-claim-value="Excluir"
+                       asp-action="Delete" asp-route-id="@item.Id"><span class="fa fa-trash-alt"></span></a>
                 </td>
             </tr>
         }
