--- a/src/DevIO.App/Views/Fornecedores/_DetalhesEndereco.cshtml
+++ b/src/DevIO.App/Views/Fornecedores/_DetalhesEndereco.cshtml
@@ -59,7 +59,8 @@
                         @Html.DisplayFor(modelItem => modelItem.Endereco.Estado)
                     </td>
                     <td>
-                        <a asp-action="AtualizarEndereco" asp-route-id="@Model.Id" class="btn btn-info" data-modal="">
+                        <a supress-by-action="Edit, ObterEndereco"
+                           asp-action="AtualizarEndereco" asp-route-id="@Model.Id" class="btn btn-info" data-modal="">
                             <span title="Editar" class="fa fa-pencil-alt"></span>
                         </a>
                     </td>
